name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  js-sources:          js/util.js
  main-is:             Main.hs
  build-depends:       base, base64-bytestring, bytestring, singletons, aeson, ghcjs-base, ghcjs-dom, miso, merkle-schemes, jsaddle, text
  default-language:    Haskell2010