name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  js-sources:          js/util.js
  main-is:             Main.hs
  build-depends:       base, aeson, merkle-schemes, optparse-applicative, directory, bytestring
  default-language:    Haskell2010