name:                app
version:             0.1.0.0
synopsis:            bt cmd client
build-type:          Simple
cabal-version:       >=1.10

executable merkle-torrent-cmd
  main-is:             Main.hs
  build-depends: base
               , aeson
               , bytestring
               , directory
               , merkle-schemes-higher
               , merkle-schemes-higher-bt
               , merkle-schemes-higher-ext
               , optparse-applicative
               , text
  default-language:    Haskell2010